--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
-{
-  "name": "lead-management-server",
-  "version": "1.0.0",
-  "description": "Web app for lead management",
-  "main": "index.js",
-  "scripts": {
-    "test": "build",
-    "start": "node index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jboss-outreach/lead-management-server.git"
-  },
-  "author": "jboss-outreach",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/jboss-outreach/lead-management-server/issues"
+@@ -17.10 +17.10 @@
+  "url": "https://github.com/jboss-outreach/lead-management-server/issues"
   },
   "dependencies": {
-    "angular-patternfly": "^4.13.3",
-    "express": "^4.15.3",
-    "firebaseui": "^2.5.1",
-    "socket.io": "^2.0.4"
+  	"angular-patternfly": "4.13.3",
+  	"express": "^4.15.3",
+  	"firebaseui": "^2.5.1",
+  	"socket.io": "^2.0.4",
+  	"angular-patternfly": "^4.18.6",
+  	"express": "^4.16.4",
+  	"firebaseui": "^2.7.0",
+  	"socket.io": "^2.1.1"
+  	
+
   },
   "homepage": "https://github.com/jboss-outreach/lead-management-server#readme"
+
 }
